--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,29 @@
 {
-  "name": "backend",
+  "name": "finance-app-backend",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Personal Finance Assistant Backend API by AJ Harsh Vardhan for typefaceAI assignment.",
+  "main": "src/app.js",
   "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": ["finance", "expense-tracker", "typeface-finance"],
   "author": "Alagadapa Jaya Harsh Vardhan (IIITS)",
-  "license": "ISC",
+  "license": "MIT",
   "type": "commonjs",
   "dependencies": {
-    "bcryptjs": "^3.0.2",
-    "cors": "^2.8.5",
-    "dotenv": "^17.2.1",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1",
-    "helmet": "^8.1.0",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.17.0",
-    "multer": "^2.0.2",
-    "tesseract.js": "^6.0.1"
+    "multer": "^1.4.5-lts.1",
+    "tesseract.js": "^4.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "helmet": "^7.1.0",
+    "express-rate-limit": "^7.1.5",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
