--- a/backend/package.json
+++ b/backend/package.json
@@ -6,24 +6,30 @@
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
+    "setup": "node src/scripts/setupDemoUser.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["finance", "expense-tracker", "typeface-finance"],
+  "keywords": [
+    "finance",
+    "expense-tracker",
+    "typeface-finance"
+  ],
   "author": "Alagadapa Jaya Harsh Vardhan (IIITS)",
   "license": "MIT",
   "type": "commonjs",
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^8.0.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1",
-    "tesseract.js": "^4.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
-    "pdf-parse": "^1.1.1"
+    "express-validator": "^7.2.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
+    "pdf-parse": "^1.1.1",
+    "tesseract.js": "^4.1.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
