--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "setup": "node src/scripts/setupDemoUser.js",
+    "setup-data": "node src/scripts/setupSampleData.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -29,6 +30,7 @@
     "mongoose": "^8.0.0",
     "multer": "^1.4.5-lts.1",
     "pdf-parse": "^1.1.1",
+    "sharp": "^0.34.3",
     "tesseract.js": "^4.1.1"
   },
   "devDependencies": {
