--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon src/app.js",
     "setup": "node src/scripts/setupDemoUser.js",
     "setup-data": "node src/scripts/setupSampleData.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo 'No build step required'"
   },
   "keywords": [
     "finance",
